--- a/Eris/Eris.vcxproj.filters
+++ b/Eris/Eris.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\search.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\pattern.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\makefile" />
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\search.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\pattern.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
